# apex-spiral

./: .gitignore  2026-05-10_RECAP.md  AGENT_SKILLS_INTEGRATION.md  APEX_AGENTSPEX_FUSION.md  APEX_AGI_RUNTIME_PARADIGM.md  APEX_CLAW_FUSION_SPEC.md  APEX_CMMI_Industrial_Workflow.md  APEX_COMPLETE_FORMULAS.md  APEX_CORE_FORMULA.md  APEX_HARNESS_RALPH_FUSION.md  APEX_MINIMAL_UNIFIED_FORMULA.md  APEX_PROTOCOL.md  APEX_V10_FORMULA.md  APEX_V9_FORMULA.md  BENCHMARKS.md  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  TALOS_V2_HARDWARE.md  apex_14d.py  apex_ultimate_v10_3.rs  apex_v10.rs  delta_g.csv  delta_g.json  genes.json  post-evolver-fix.sh  run_evolver.sh  run_tests.sh
ApexSpiral/: README.md
apex-standard/: apex-data-standard-v1.md  apex-event-standard-v1.json  apex-gene-standard-v1.json  apex-standard-adapter.js  apex-state-standard-v1.json  fix-apex-schema.js  migrate-to-apex-standard.js  validate-apex-schema.js
apex_devour/: Cargo.toml  sample_hybrid_retrieval.json  sample_maintenance_sessions.json  sample_reflections.json  sample_resolution_runs.json  sample_trajectory.json  sample_vlm_trajectory.json
apex_devour/src/: apex_gate.rs  apex_gate_health.rs  apex_gate_registry.rs  auto_repair.rs  credit.rs  devour.rs  hybrid_retrieval.rs  iteration_budget.rs  main.rs  maintenance.rs  mcp_client.rs  reflection.rs  resolution.rs  straTA.rs  vlm_agentic.rs
evolution/: registry.json  registry.json.bak.cycle141-20260620-000355  registry.json.bak.cycle143-alias-repair-20260621-0006  registry.json.bak.cycle_134_drift_repair-apex-spiral-20260616-120326
evomaster_claw_core/: Cargo.toml  sample_constraints.json  sample_trajectory.jsonl
evomaster_claw_core/src/: main.rs
memory/: atp-autobuyer-ledger.json  evolver_update_check.json
py/: apex_model.pt  pyproject.toml
py/apex_spiral/: __init__.py  apex_daily.py  apex_self_check.py  apex_v10.py  apex_v10_v2.py  core.py  deep_learning.py  gini_gene_selector.py  self_evolution_policy.json
py/apex_spiral.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+137 files in other folders)
