[package]
name = "apex_devour"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "apex_devour"
path = "src/main.rs"