[package]
name = "evomaster_claw_core"
version = "0.1.0"
edition = "2021"
description = "EvoMaster adapted CLAW native evolution core: trajectory objective, policy update, and hash-pool knowledge cache"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
