[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-spiral"
version = "0.1.0"
description = "璇玑帝国 APEX 终极闭环进化公式 · Python 实现"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "璇玑帝国", email = "contact@apexspiral.dev"}
]
keywords = ["apex", "ai", "evolution", "performance", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/ApexSpiral/apex-spiral"
Repository = "https://github.com/ApexSpiral/apex-spiral"
Documentation = "https://apexspiral.dev/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["apex_spiral*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
